--- a/bower.json
+++ b/bower.json
@@ -18,11 +18,12 @@
     "test",
     "tests"
   ],
-    "dependencies": {
-        "angular": "latest",
-        "angular-resource": "latest",
-        "angular-route": "latest",
-        "toastr": "latest",
-        "jquery": "latest"
-    }
+  "dependencies": {
+    "angular": "latest",
+    "angular-resource": "latest",
+    "angular-route": "latest",
+    "toastr": "latest",
+    "jquery": "latest",
+    "bootstrap": "latest"
+  }
 }
