adding views and routing

--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "angular-route": "latest",
     "toastr": "latest",
     "jquery": "latest",
-    "bootstrap": "latest"
+    "bootstrap": "latest",
+    "requirejs": "latest"
   }
 }
