--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "passport-local":"^1.0.0",
         "passport-facebook":"^2.0.0",
         "passport-google-oauth-2":"^0.1.1",
-        "mongoose": "^3.8.24",
+        "mongoose": "4.0.2",
         "bcrypt-nodejs" : "^0.0.3",
         "connect-mongo" : "^0.7.0",
         "socket.io" : "^1.3.5",
